# cmake_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/template/: README.md  template_repository
.github/workflows/: ci.yml  template-janitor.yml
cmake/: FindSuperLU.cmake  Linker.cmake  Sanitizers.cmake  Tests.cmake
configured_files/: CMakeLists.txt  config.hpp.in
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/myproject/: sample_library.hpp
include/myproject/Random/: Sampler2d.hpp
include/myproject/Utils/: Random.hpp  Sampler2d.hpp
src/: CMakeLists.txt
src/Random/: CMakeLists.txt  Sampler2d.cpp
src/Utils/: CMakeLists.txt  Random.cpp  Sampler2d.cpp
src/app/: CMakeLists.txt  main.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
test/constexpr/: CMakeLists.txt  constexpr_tests.cpp
test/unittests/: CMakeLists.txt  tests.cpp
